# CommandClient

./: .gitignore  CMakeLists.txt  README.md  client.cpp  client.h  main.cpp
res/qml/: main.qml
src/: client.cpp  client.h  main.cpp
